# CREATE_DLL

./: README.md
CSTYLE_DLL/MyApp/: CMakeLists.txt
CSTYLE_DLL/MyApp/src/: main.cpp
CSTYLE_DLL/MyLibrary/: API.cpp  Wrapper.h
DIRECT_APPROACH_DLL/MyApp/: CMakeLists.txt
DIRECT_APPROACH_DLL/MyApp/libs/: CMakeLists.txt
DIRECT_APPROACH_DLL/MyApp/src/: Manager.h  main.cpp
DIRECT_APPROACH_DLL/MyLibrary/: CMakeLists.txt  Manager.cpp  Operator.cpp  Operator.h  Wrapper.cpp  Wrapper.h
